--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
-    <title>Homepage</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Homepage</title>  
 </head>
 <body>
     <nav>
@@ -21,7 +21,7 @@
     <div class="content">
         <h1>Hi, my name is Sam.</h1>
         <p>I'm a junior at the University of Michigan studying Information Sceince with a Concentration in User Experience </p>
-        <div class="'links">
+        <div class="links">
             <a href="about.html">
                 <img src="images/about.jpg" alt="About Me" class="logo">
             </a>
