--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Homepage</title>  
+    <title>Homepage</title>\  
 </head>
 <body>
     <nav>
@@ -23,16 +23,16 @@
         <p>I'm a junior at the University of Michigan studying Information Sceince with a Concentration in User Experience </p>
         <div class="links">
             <a href="about.html">
-                <img src="images/about.jpg" alt="About Me" class="logo">
+                <img src="images/about.png" alt="About Me" class="logo">
             </a>
             <a href="si-projects.html">
-                <img src="images/si-projects.jpg" alt="SI Projects" class="logo">
+                <img src="images/si-projects.png" alt="SI Projects" class="logo">
             </a>
             <a href="eecs-projects.html">
-                <img src="images/eecs-projects-logo.jpg" alt="EECS Projects" class="logo">
+                <img src="images/eecs-projects.png" alt="EECS Projects" class="logo">
             </a>
             <a href="interests.html">
-                <img src="images/interests.jpg" alt="Interests" class="logo">
+                <img src="images/interests.png" alt="Interests" class="logo">
             </a>
         </div>
     </div>
