--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Homepage</title>\  
+    <title>Homepage</title> 
 </head>
 <body>
     <nav>
@@ -37,7 +37,8 @@
         </div>
     </div>
     <footer class="footer">
-        <p>Coded in VSCode. Connect with me!</p>
+        <p>Coded in VSCode.</p>
+        <p>Connect with me!</p>
         <p>
             <a href="https://www.linkedin.com/in/samira-marquez-gomez-017a86293/" target="_blank">LinkedIn</a> | 
             Email: <a href="mailto:smarquez@umich.edu">smarquez@umich.edu</a> | 
