--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </nav>
     <div class="content">
         <h1 class="intro-text">Hi, my name is Sam.</h1>
+        <img src="images/headshot.jpg" alt="Sam standing in front of a staircase" class="headshot">
         <p>I'm a junior at the University of Michigan studying Information Sceince with a concentration in User Experience </p>
         <div class="links">
             <a href="about.html">
@@ -50,6 +51,6 @@
         toggleButton.addEventListener('click', () => {
             document.body.classList.toggle('dark-mode');
         });
-    </script>s
+    </script>
 </body>
 </html>
