--- a/experience.html
+++ b/experience.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>About Me</title>
+    <title>Experience</title>
 </head>
 <body>
     <nav>
@@ -20,13 +20,6 @@
         </div>
     </nav>
     <div class="content">
-        <h1>About Me...</h1>
-        <div class="about-detail">
-            <img src="images/profile.jpg" alt="Sam standing in front of wall" class="profile-pic">
-            <p>Hello! My name is Samira Marquez Gomez but I go by Sam! I'm a junior at the University of Michigan studying Information Science with a concentration in User Experience.</p>
-            <p>I have a passion for designing user-friendly interfaces and creating seamless user experiences. In my free time, I enjoy spending time with friends and exploring new technologies</p>
-            <p>Feel free to explore my website to know more about my projects, interests, and experiences. If you want to get in touch, visit the contact section in the footer below. Thanks for stopping by!</p>
-        </div>
         <h2>Relevant Professional Experience</h2>
         <div class="experience">
             <h3>1Cademy Remote</h3>
