--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
             <a href="si-projects.html">SI Projects</a>
             <a href="eecs-projects.html">EECS Projects</a>
             <a href="interests.html">Interests</a>
+            <a href="experience.html">Experience</a>
             <button id="mode-toggle">Toggle Mode</button>
         </div>
     </nav>
     <div class="content">
-        <h1 class="intro-text">Hi, my name is Sam.</h1>
-        <img src="images/headshot.jpg" alt="Sam standing in front of a staircase" class="headshot">
-        <p>I'm a junior at the University of Michigan studying Information Sceince with a concentration in User Experience </p>
+        <div class="intro-container"> 
+            <h1 class="intro-text">Hi, my name is Sam.</h1>
+            <img src="images/headshot.jpg" alt="Sam standing in front of a staircase" class="headshot">
+        </div>
+        <p>I'm a junior at the University of Michigan studying Information Science with a concentration in User Experience.</p>
         <div class="links">
             <a href="about.html">
                 <img src="images/about.png" alt="About Me button" class="logo">
