--- a/about.html
+++ b/about.html
@@ -12,74 +12,19 @@
         <div class="navbar">
             <a href="index.html">Home</a>
             <a href="about.html">About Me</a>
-            <a href="si-projects.html">SI Projects</a>
-            <a href="eecs-projects.html">EECS Projects</a>
-            <a href="interests.html">Interests</a>
             <a href="experience.html">Experience</a>
+            <a href="si-projects.html">SI Projects</a>
+            <a href="interests.html">Interests</a>
             <button id="mode-toggle">Toggle Mode</button>
         </div>
     </nav>
-    <div class="content">
+    <div class="about content">
         <h1>About Me...</h1>
         <div class="about-detail">
             <img src="images/profile.jpg" alt="Sam standing in front of wall" class="profile-pic">
             <p>Hello! My name is Samira Marquez Gomez but I go by Sam! I'm a junior at the University of Michigan studying Information Science with a concentration in User Experience.</p>
             <p>I have a passion for designing user-friendly interfaces and creating seamless user experiences. In my free time, I enjoy spending time with friends and exploring new technologies</p>
             <p>Feel free to explore my website to know more about my projects, interests, and experiences. If you want to get in touch, visit the contact section in the footer below. Thanks for stopping by!</p>
-        </div>
-        <h2>Relevant Professional Experience</h2>
-        <div class="experience">
-            <h3>1Cademy Remote</h3>
-            <h4>Assistant Researcher</h4>
-            <p>Jun. 2023 - Oct. 2023</p>
-            <ul>
-                <li>Employed 1Cademy collaborative content mapping platform to systematically organize and interlink pivotal concepts from online community research literature, enhancing the platform's knowledge base.</li>
-                <li>Conducted interviews and proficiently coded data, preparing it for inclusion in a research paper on online communities, contributing to the overall depth and quality of the scholarly work.</li>
-            </ul>
-
-            <h3>AONVERSE Remote</h3>
-            <h4>User Experience Intern</h4>
-            <p>Dec. 2023 - Jun. 2024</p>
-            <ul>
-                <li>Led the improvement of visual elements on the AONVERSE platform using user-centered design principles, ensuring compliance with data privacy laws and enhancing overall user satisfaction.</li>
-                <li>Ensured strict adherence to ADA compliance standards during the design modification process, guaranteeing an inclusive and accessible user experience for all platform users.</li>
-            </ul>
-        </div>
-
-        <h2>Leadership Experience</h2>
-        <div class="experience">
-            <h3>Zeta Pi - Professional Technology Fraternity Ann Arbor, MI</h3>
-            <h4>Head of Ethics</h4>
-            <p>Apr. 2023 - Dec. 2023</p>
-            <ul>
-                <li>Developed and led open forum discussions on 10+ ethics topics, including data privacy and algorithmic bias, engaging fraternity members to foster inclusive tech industry conversations.</li>
-                <li>Spearheaded initiatives on ethics in tech, promoting awareness of data privacy and inclusivity, resulting in increased engagement and understanding among 30+ fraternity members.</li>
-            </ul>
-            <h4>Vice President</h4>
-            <p>Dec. 2023 - Present</p>
-            <ul>
-                <li>Oversee fraternity finances, managing a budget of $6,000 and ensuring accurate tracking of dues and expenses, which improved financial transparency.</li>
-                <li>Organized and led biweekly chapter meetings, facilitating discussions and documenting decisions that enhanced fraternity engagement and cohesion.</li>
-                <li>Handled disciplinary matters with a fair and strategic approach, ensuring fraternity standards were upheld.</li>
-            </ul>
-
-            <h3>Kessler Scholars Ann Arbor, MI</h3>
-            <h4>Peer Mentor</h4>
-            <p>Aug. 2023 - Present</p>
-            <ul>
-                <li>Mentored first-generation students, offering personalized guidance on academic challenges, study strategies, and course selection.</li>
-                <li>Supported mentees in navigating the transition to college, providing resources that helped them improve academic performance and adapt to university life.</li>
-            </ul>
-        </div>
-
-        <h2>Skills</h2>
-        <div class="skills">
-            <ul>
-                <li><strong>Languages:</strong> Fluent in English and Spanish; Intermediate in French</li>
-                <li><strong>Programming:</strong> C++, Python, SQL (sqlite), R, HTML, CSS</li>
-                <li><strong>Design:</strong> Canva, Figma</li>
-                <li>Proficient in Microsoft Office, Excel, PowerPoint, Word, Adobe Creative Suite</li>
-            </ul>
         </div>
     </div>
     <footer class="footer">
