--- a/experience.html
+++ b/experience.html
@@ -12,14 +12,14 @@
         <div class="navbar">
             <a href="index.html">Home</a>
             <a href="about.html">About Me</a>
-            <a href="si-projects.html">SI Projects</a>
-            <a href="eecs-projects.html">EECS Projects</a>
-            <a href="interests.html">Interests</a>
             <a href="experience.html">Experience</a>
+            <a href="si-projects.html">SI Projects</a>
+            <a href="interests.html">Interests</a>
             <button id="mode-toggle">Toggle Mode</button>
         </div>
     </nav>
     <div class="content">
+        <h1>Experience...</h1>
         <h2>Relevant Professional Experience</h2>
         <div class="experience">
             <h3>1Cademy Remote</h3>
@@ -69,7 +69,7 @@
         <div class="skills">
             <ul>
                 <li><strong>Languages:</strong> Fluent in English and Spanish; Intermediate in French</li>
-                <li><strong>Programming:</strong> C++, Python, SQL (sqlite), R, HTML, CSS</li>
+                <li><strong>Programming:</strong> C++, Python, SQL (sqlite), R, HTML, CSS, Javascript</li>
                 <li><strong>Design:</strong> Canva, Figma</li>
                 <li>Proficient in Microsoft Office, Excel, PowerPoint, Word, Adobe Creative Suite</li>
             </ul>
