--- a/index.html
+++ b/index.html
@@ -12,28 +12,29 @@
         <div class="navbar">
             <a href="index.html">Home</a>
             <a href="about.html">About Me</a>
-            <a href="si-projects.html">SI Projects</a>
-            <a href="eecs-projects.html">EECS Projects</a>
-            <a href="interests.html">Interests</a>
             <a href="experience.html">Experience</a>
+            <a href="si-projects.html">SI Projects</a>
+            <a href="interests.html">Interests</a>
             <button id="mode-toggle">Toggle Mode</button>
         </div>
     </nav>
     <div class="content">
         <div class="intro-container"> 
-            <h1 class="intro-text">Hi, my name is Sam.</h1>
+            <div class="intro-text">
+                <h1>Hi, my name is Sam.</h1>
+                <p>I'm a junior at the University of Michigan studying Information Science with a concentration in User Experience. Welcome to my portfolio website!</p>
+            </div>
             <img src="images/headshot.jpg" alt="Sam standing in front of a staircase" class="headshot">
         </div>
-        <p>I'm a junior at the University of Michigan studying Information Science with a concentration in User Experience.</p>
         <div class="links">
             <a href="about.html">
                 <img src="images/about.png" alt="About Me button" class="logo">
             </a>
+            <a href="experience.html">
+                <img src="images/experience.png" alt="experience button" class="logo">
+            </a>
             <a href="si-projects.html">
                 <img src="images/si-projects.png" alt="SI Projects button" class="logo">
-            </a>
-            <a href="eecs-projects.html">
-                <img src="images/eecs-projects.png" alt="EECS Projects button" class="logo">
             </a>
             <a href="interests.html">
                 <img src="images/interests.png" alt="Interests button" class="logo">
