--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="dist/css/lightbox.css" rel="stylesheet" />
     <title>Homepage</title> 
 </head>
 <body>
     <nav>
-        <div class="navbar">
-            <a href="index.html">Home</a>
-            <a href="about.html">About Me</a>
-            <a href="experience.html">Experience</a>
-            <a href="si-projects.html">SI Projects</a>
-            <a href="interests.html">Interests</a>
-            <button id="mode-toggle">Toggle Mode</button>
+        <div class="navbar" role="navigation" aria-label="Main navigation">
+            <a href="index.html" aria-label="Go to Home page">Home</a>
+            <a href="about.html" aria-label="Go to About Me page">About Me</a>
+            <a href="experience.html" aria-label="Go to Experience page">Experience</a>
+            <a href="si-projects.html" aria-label="Go to SI Projects page">SI Projects</a>
+            <a href="interests.html" aria-label="Go to Interests page">Interests</a>
+            <button id="mode-toggle" aria-label="Toggle dark mode">Toggle Mode</button>
         </div>
     </nav>
     <div class="content">
@@ -24,37 +25,55 @@
                 <h1>Hi, my name is Sam.</h1>
                 <p>I'm a junior at the University of Michigan studying Information Science with a concentration in User Experience. Welcome to my portfolio website!</p>
             </div>
-            <img src="images/headshot.jpg" alt="Sam standing in front of a staircase" class="headshot">
+            <!-- ARIA attributes for Lightbox -->
+            <a href="images/headshot.jpg" data-lightbox="headshot" data-title="Sam's Headshot" aria-label="Enlarge Sam's headshot">
+                <img src="images/headshot.jpg" alt="Sam standing in front of a staircase" class="headshot">
+            </a>        
         </div>
-        <div class="links">
-            <a href="about.html">
+        <div class="links" aria-label="Quick links to site sections">
+            <a href="about.html" aria-label="Go to About Me page">
                 <img src="images/about.png" alt="About Me button" class="logo">
             </a>
-            <a href="experience.html">
-                <img src="images/experience.png" alt="experience button" class="logo">
+            <a href="experience.html" aria-label="Go to Experience page">
+                <img src="images/experience.png" alt="Experience button" class="logo">
             </a>
-            <a href="si-projects.html">
+            <a href="si-projects.html" aria-label="Go to SI Projects page">
                 <img src="images/si-projects.png" alt="SI Projects button" class="logo">
             </a>
-            <a href="interests.html">
+            <a href="interests.html" aria-label="Go to Interests page">
                 <img src="images/interests.png" alt="Interests button" class="logo">
             </a>
         </div>
     </div>
-    <footer class="footer">
+    <footer class="footer" role="contentinfo">
         <p>Coded in VSCode.</p>
         <p>Connect with me!</p>
         <p>
-            <a href="https://www.linkedin.com/in/samira-marquez-gomez-017a86293/" target="_blank">LinkedIn</a> | 
-            Email: <a href="mailto:smarquez@umich.edu">smarquez@umich.edu</a> | 
-            Phone: <a href="tel:+16785701202">678-570-1202</a>
+            <a href="https://www.linkedin.com/in/samira-marquez-gomez-017a86293/" target="_blank" aria-label="Visit Sam's LinkedIn profile">LinkedIn</a> | 
+            Email: <a href="mailto:smarquez@umich.edu" aria-label="Send an email to smarquez@umich.edu">smarquez@umich.edu</a> | 
+            Phone: <a href="tel:+16785701202" aria-label="Call Sam at 678-570-1202">678-570-1202</a>
         </p>
     </footer>
+    <script src="dist/js/lightbox-plus-jquery.js"></script>
     <script>
-        const toggleButton = document.getElementById('mode-toggle');
-        toggleButton.addEventListener('click', () => {
-            document.body.classList.toggle('dark-mode');
-        });
+        document.addEventListener("DOMContentLoaded", () => {
+    const toggleButton = document.getElementById("mode-toggle");
+
+    toggleButton.addEventListener("click", () => {
+        const root = document.documentElement;
+
+        // Toggle between light and dark mode
+        if (root.style.getPropertyValue("--navbar-footer-bg-color") === "var(--background-color-dark)") {
+            root.style.setProperty("--navbar-footer-bg-color", "var(--background-color-light)");
+            root.style.setProperty("--text-color", "var(--text-color-light)");
+            document.body.style.backgroundColor = "white";
+        } else {
+            root.style.setProperty("--navbar-footer-bg-color", "var(--background-color-dark)");
+            root.style.setProperty("--text-color", "var(--text-color-dark)");
+            document.body.style.backgroundColor = "#333";
+        }
+    });
+});
     </script>
 </body>
 </html>
