--- a/si-projects.html
+++ b/si-projects.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="dist/css/lightbox.css" rel="stylesheet" />
     <title>SI Projects</title>
 </head>
 <body>
@@ -24,7 +25,9 @@
             <h2>SI 110: Introduction to Information Studies</h2>
             <div class="project">
                 <h3>Green Trips Hypothetical App</h3>
-                <img src="images/green-trips.jpg" alt="Green Trips App Logo" class="project-image">
+                <a href="images/green-trips.jpg" data-lightbox="green-trips" data-title="Green Trips App Logo">
+                    <img src="images/green-trips.jpg" alt="Green Trips App Logo" class="project-image">
+                </a>                
                 <p>In SI 110, one of our final assignments was to create a hypothetical application aimed towards fixing an issue in our community. My group proposed a ride share app aimed towards addressing safety concerns on campus. We surveyed our fellow classmates and found that many students wished there was a better way to find rides when going off campus as well as having a way to verify that the people they are reaching out to for ride sharing are also students. Our proposed app Green Trips would offer a solution to these issues as it would simplify the process of finding people to carpool with by providing a secure platform to connect with other students. For this assignment I worked on creating app mockups for our proposed app.</p>
                 <p><a href="https://www.canva.com/design/DAF1r9sW7n4/20wSiTRFjcc0HVTj1Z9K2A/edit?utm_content=DAF1r9sW7n4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">View App Mockups</a></p>
             </div>
@@ -33,7 +36,9 @@
             <h2>SI 206: Data-Oriented Programming</h2>
             <div class="project">
                 <h3>Employment Data Analysis for Civil Rights Case</h3>
-                <img src="images/employment-data-analysis.jpg" alt="person sitting one grass holding graphs" class="project-image">
+                <a href="images/employment-data-analysis.jpg" data-lightbox="employment-data" data-title="Employment Data Analysis">
+                    <img src="images/employment-data-analysis.jpg" alt="person sitting one grass holding graphs" class="project-image">
+                </a>                
                 <p>In this project, I worked on analyzing historical employment data for the DeGraffenreid v. General Motors lawsuit from 1976. The primary focus was to validate claims of discrimination against Black women using data analysis techniques applied to Comma-Separated Values (CSV) files and nested dictionaries.</p>
                 <p>General Motors’ (GM) layoff policy during the 1970s recession is the core subject of this analysis. The company used a seniority-based layoff policy ("last hired, first fired"), which disproportionately impacted Black women due to previous discriminatory hiring practices. This project involved coding and implementing various functions to load, categorize, and analyze the data, ultimately revealing critical insights into the intersection of race and gender within GM’s workforce.</p>
                 <p>Through this project, I demonstrated the application of data science techniques to uncover actionable insights related to employment discrimination. The analysis confirmed that GM’s seniority-based layoff policy disproportionately affected Black women due to historic hiring disparities. This project not only showcased my technical skills but also emphasized the importance of considering socio-economic factors and intersectionality in data analysis.</p>
@@ -41,7 +46,9 @@
             </div>
             <div class="project">
                 <h3>Web Scraping Airbnb Data for Compliance and Accountability</h3>
-                <img src="images/airbnb.jpg" alt="airbnb magazine on coffee table" class="project-image"> 
+                <a href="images/airbnb.jpg" data-lightbox="airbnb" data-title="Airbnb Data Scraping">
+                    <img src="images/airbnb.jpg" alt="airbnb magazine on coffee table" class="project-image">
+                </a>
                 <p>In this project, I employed web scraping techniques to gather and analyze data from Airbnb's website. Leveraging the BeautifulSoup library in Python, I extracted important data from static HTML files provided from Airbnb's public listings in the Mission District of San Francisco. The project's core aim was to investigate whether Airbnb hosts were complying with San Francisco's local laws requiring business licenses for short-term rentals.</p>
                 <p>Reflecting the broader social context, this analysis is crucial as it pertains to accountability in the face of potential exacerbation of the housing crisis caused by short-term rental platforms like Airbnb. By ensuring that listings comply with local regulations, the project aims to support the corrective systems that manage San Francisco's housing market.</p>
                 <p><a href="https://github.com/SI206-UMich/206-project2-wn24-smarquez04/blob/master/wn24_proj2_starter.py" target="_blank">View on GitHub</a></p>
@@ -51,13 +58,17 @@
             <h2>SI 307: Introduction to User Experience Design</h2>
             <div class="project">
                 <h3>Recreating Venmo</h3>
-                <img src="images/venmo.jpg" alt="Image of Venmo website" class="project-image"> 
+                <a href="images/venmo.jpg" data-lightbox="venmo" data-title="Venmo Like a Pro Page">
+                    <img src="images/venmo.jpg" alt="Image of Venmo website" class="project-image">
+                </a>
                 <p>Throughout SI 307, using core skills for Figma like autolayouts, styles, components, responsive layouts and animations I was able to successfully recreate Venmo's landing page for both mobile and desktop.</p>
                 <p><a href="https://www.figma.com/design/N9C2lGZzHABKttKWK7SFio/SI-307---Discussion-Activities---Samira-Marquez?node-id=241-167&node-type=canvas&t=rUGeQ89lm8qMz97N-0" target="_blank">View Figma File</a></p>
             </div>
             <div class="project">
                 <h3>MI-Maizey Re-design</h3>
-                <img src="images/mi-maizey-redesign.jpg" alt="MI-Maizey Re-design" class="project-image"> 
+                <a href="images/mi-maizey-redesign.jpg" data-lightbox="mi-maizey-redesign" data-title="Hero section from landing page">
+                    <img src="images/mi-maizey-redesign.jpg" alt="MI-Maizey Re-design" class="project-image">
+                </a>
                 <p>In partnership with the University of Michigan ITS Services, I was able to apply core UX principles while re-designing one of the universities AI tools. I chose to re-design its newest tool MI-Maizey, my redesign of Mi-Maizey aims to address critical issues in user onboarding, engagement, and data transparency to better meet the needs of University of Michigan students. The ultimate goal is to make Mi-Maizey more user-friendly and engaging, thereby increasing its adoption among students and faculty.</p>
                 <p><a href="https://www.figma.com/proto/oMvnLnLkNMybo1g7s2vHLy/%235---First-Draft-of-Designs-%26-Presentation-Deck?node-id=31-1687" target="_blank">View Figma File</a></p>
                 <p><a href="https://www.figma.com/proto/oMvnLnLkNMybo1g7s2vHLy/%235---First-Draft-of-Designs-%26-Presentation-Deck?node-id=31-1682&node-type=canvas&t=yRI2BlThgXgYo3Cy-0&scaling=contain&content-scaling=fixed&page-id=0%3A1" target="_blank">View Slide Deck</a></p>
@@ -67,7 +78,9 @@
             <h2>SI 339: Web Design, Development, and Accessibility</h2>
             <div class="project">
                 <h3>Client Project: Cross-country Website</h3>
-                <img src="images/xc.jpg" alt="Cross-country Website image" class="project-image"> 
+                <a href="images/xc.jpg" data-lightbox="xc" data-title="Home page">
+                    <img src="images/xc.jpg" alt="Cross-country Website image" class="project-image">
+                </a>
                 <p>For this semester-long project, I was able to utilize HTML, CSS, and Javascript in order to improve a local Ann Arbor high school's cross country team website. The goal was to create a website that is fully accessible. Additionally, I chose to follow an athlete-centered approach so that athletes are able to easily track their year-by-year progress.</p>
                 <p><a href="https://smarquez04.github.io/si339-d3/index.html" target="_blank">View Website</a></p>
             </div>       
@@ -82,11 +95,26 @@
             Phone: <a href="tel:+16785701202">678-570-1202</a>
         </p>
     </footer>
+    <script src="dist/js/lightbox-plus-jquery.js"></script>
     <script>
-        const toggleButton = document.getElementById('mode-toggle');
-        toggleButton.addEventListener('click', () => {
-            document.body.classList.toggle('dark-mode');
-        });
+        document.addEventListener("DOMContentLoaded", () => {
+    const toggleButton = document.getElementById("mode-toggle");
+
+    toggleButton.addEventListener("click", () => {
+        const root = document.documentElement;
+
+        // Toggle between light and dark mode
+        if (root.style.getPropertyValue("--navbar-footer-bg-color") === "var(--background-color-dark)") {
+            root.style.setProperty("--navbar-footer-bg-color", "var(--background-color-light)");
+            root.style.setProperty("--text-color", "var(--text-color-light)");
+            document.body.style.backgroundColor = "white";
+        } else {
+            root.style.setProperty("--navbar-footer-bg-color", "var(--background-color-dark)");
+            root.style.setProperty("--text-color", "var(--text-color-dark)");
+            document.body.style.backgroundColor = "#333";
+        }
+    });
+});
     </script>
 </body>
 </html>
