--- a/about.html
+++ b/about.html
@@ -5,43 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="dist/css/lightbox.css" rel="stylesheet" />
     <title>About Me</title>
 </head>
 <body>
     <nav>
-        <div class="navbar">
-            <a href="index.html">Home</a>
-            <a href="about.html">About Me</a>
-            <a href="experience.html">Experience</a>
-            <a href="si-projects.html">SI Projects</a>
-            <a href="interests.html">Interests</a>
-            <button id="mode-toggle">Toggle Mode</button>
+        <div class="navbar" role="navigation" aria-label="Main navigation">
+            <a href="index.html" aria-label="Go to Home page">Home</a>
+            <a href="about.html" aria-current="page" aria-label="Go to About Me page">About Me</a>
+            <a href="experience.html" aria-label="Go to Experience page">Experience</a>
+            <a href="si-projects.html" aria-label="Go to SI Projects page">SI Projects</a>
+            <a href="interests.html" aria-label="Go to Interests page">Interests</a>
+            <button id="mode-toggle" aria-label="Toggle dark mode">Toggle Mode</button>
         </div>
     </nav>
-    <div class="about content">
+    <main class="about content" role="main">
         <h1>About Me...</h1>
         <div class="about-detail">
-            <img src="images/profile.jpg" alt="Sam standing in front of wall" class="profile-pic">
+            <a href="images/profile.jpg" data-lightbox="profile" data-title="Me in Puerto Rico!" aria-label="Enlarge profile picture">
+                <img src="images/profile.jpg" alt="Sam standing in front of a wall in Puerto Rico" class="profile-pic">
+            </a>
             <p>Hello! My name is Samira Marquez Gomez but I go by Sam! I'm a junior at the University of Michigan studying Information Science with a concentration in User Experience.</p>
-            <p>I have a passion for designing user-friendly interfaces and creating seamless user experiences. In my free time, I enjoy spending time with friends and exploring new technologies</p>
+            <p>I have a passion for designing user-friendly interfaces and creating seamless user experiences. In my free time, I enjoy spending time with friends and exploring new technologies.</p>
             <p>Feel free to explore my website to know more about my projects, interests, and experiences. If you want to get in touch, visit the contact section in the footer below. Thanks for stopping by!</p>
         </div>
-    </div>
-    <footer class="footer">
+    </main>
+    <footer class="footer" role="contentinfo">
         <p>Coded in VSCode.</p>
         <p>Connect with me!</p>
         <p>
-            <a href="https://www.linkedin.com/in/samira-marquez-gomez-017a86293/" target="_blank">LinkedIn</a> | 
-            Email: <a href="mailto:smarquez@umich.edu">smarquez@umich.edu</a> | 
-            Phone: <a href="tel:+16785701202">678-570-1202</a>
+            <a href="https://www.linkedin.com/in/samira-marquez-gomez-017a86293/" target="_blank" aria-label="Visit my LinkedIn profile">LinkedIn</a> | 
+            Email: <a href="mailto:smarquez@umich.edu" aria-label="Send me an email at smarquez@umich.edu">smarquez@umich.edu</a> | 
+            Phone: <a href="tel:+16785701202" aria-label="Call me at 678-570-1202">678-570-1202</a>
         </p>
     </footer>
-
+    <script src="dist/js/lightbox-plus-jquery.js"></script>
     <script>
-        const toggleButton = document.getElementById('mode-toggle');
-        toggleButton.addEventListener('click', () => {
-            document.body.classList.toggle('dark-mode');
-        });
+        document.addEventListener("DOMContentLoaded", () => {
+    const toggleButton = document.getElementById("mode-toggle");
+
+    toggleButton.addEventListener("click", () => {
+        const root = document.documentElement;
+
+        // Toggle between light and dark mode
+        if (root.style.getPropertyValue("--navbar-footer-bg-color") === "var(--background-color-dark)") {
+            root.style.setProperty("--navbar-footer-bg-color", "var(--background-color-light)");
+            root.style.setProperty("--text-color", "var(--text-color-light)");
+            document.body.style.backgroundColor = "white";
+        } else {
+            root.style.setProperty("--navbar-footer-bg-color", "var(--background-color-dark)");
+            root.style.setProperty("--text-color", "var(--text-color-dark)");
+            document.body.style.backgroundColor = "#333";
+        }
+    });
+});
     </script>
 </body>
 </html>
